--- a/aiSupport.html
+++ b/aiSupport.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>삐약 AI 비서</title>
+  <title>옹아리 AI 비서</title>
   <style>
     body { font-family: Arial, sans-serif; background: #f4f4f4; margin: 0; padding: 0; display: flex; flex-direction: column; height: 100vh; }
     .chat-container { flex: 1; padding: 16px; overflow-y: auto; }
@@ -61,7 +61,7 @@
 
       try {
         const BACKEND_URL = '#';
-        <!--Bend end point url domain-->>
+        <!--Bend end point url domain-->
         const response = await fetch(`${BACKEND_URL}/api/chat`, {
           method: 'POST',
           headers: { 'Content-Type': 'application/json' },
