--- a/index3.html
+++ b/index3.html
@@ -32,6 +32,7 @@
             padding: 20px;
             transition: all 0.3s ease;
             animation: slideUp 0.5s ease forwards;
+            margin-top: 25%;
         }
 
         @keyframes slideUp {
@@ -127,11 +128,8 @@
             <input type="text" placeholder="정보 홀더1">
             <input type="text" placeholder="010-1234-5678">
             <button onclick="window.open('index4.html')">전화 걸기</button>
+            <p style="text-align: center;">/* 전화 걸기를 누르시면 <br>다음으로 넘어 갑니다. */</p>
         </form>
-    </div>
-
-    <div class="gray-bottom">
-    <p class="subtitle">/* 전화 걸기를 누르시면 <br>다음으로 넘어 갑니다. */</p>
     </div>
 </body>
 
