--- a/qr.html
+++ b/qr.html
@@ -37,7 +37,7 @@
 <body>
     <div class="container">
         <h1>옹아리 <img src="drugs.png" style="width:30px; height:30px;" alt="">를 <br>소개 합니다!</h1>
-        <img src="soll.png" alt="QR Code">
+        <img src="bbi.png" alt="QR Code">
     </div>
 </body>
 
